# colouranga

./: .gitignore  README.md  cspell.yml  environment.yml  pyproject.toml  requirements.txt
libs/colouranga/: __init__.py  utils.py
libs/colouranga/from_magi_model/: __init__.py  config.json  model.py  model_for_test.py  new_model.py  processor.py  utils.py
libs/magi/: README.md  config.json  configuration_magi.py  modelling_magi.py  modelling_new.py  new_model.py  processing_magi.py  utils.py
libs/manga_det.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: check.ipynb  clear_notebook.ipynb  debugging.ipynb  example.ipynb  final.ipynb  for_git.ipynb  isnetis.ipynb  metrics.ipynb  mew.ipynb  new_note.ipynb  old_note.ipynb  test_searching.ipynb
scripts/: debuggin.py  example.py  mount.sh  unmount.sh
src/colouranga/: __init__.py
src/colouranga/from_magi_model/: config.py  model.py  processor.py  utils.py
