[project]
name = "manga-det"
version = "0.1.0"
description = "Contains code of the master's thesis on the subject of 'Transfer learning in locomotion problem via masked self-attention mechanism'."
requires-python = "==3.10.*"
dependencies = [
    "stable_diffusion_reference_only @ git+https://github.com/aihao2000/stable-diffusion-reference-only.git",
    "anime-segmentation @ git+https://github.com/aihao2000/anime-segmentation.git", "diffusers==0.21.*", "accelerate",
]
readme = "README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "libs" }

[tool.pixi.project]
channels = ["nvidia", "conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.pypi-options]
extra-index-urls = ["https://pypi.nvidia.com"]

[tool.pixi.dependencies]
opencv = { version = "*", channel = "conda-forge" }
torchmetrics = ">=1.4.0.post0,<1.4.1"
timm = ">=1.0.3,<1.1"
[tool.pixi.feature.numeric.dependencies] # ? numeric
numpy = { version = "*", channel = "conda-forge" }
einops = { version = "*", channel = "conda-forge" }
scipy = { version = "*", channel = "conda-forge" }
pandas = { version = "*", channel = "conda-forge" }
scikit-learn = { version = "*", channel = "conda-forge" }
pillow = { version = "*", channel = "conda-forge" }
jaxtyping = { version = "*", channel = "conda-forge" }

[tool.pixi.feature.plots.dependencies] # ? plots
matplotlib = { version = "*", channel = "conda-forge" }
seaborn = { version = "*", channel = "conda-forge" }

[tool.pixi.feature.torch.dependencies] # ? torch
pytorch = { version = "2.3.*", channel = "pytorch" }
pytorch-cuda = { version = "11.8.*", channel = "pytorch" }
torchvision = { version = "*", channel = "pytorch" }
torchinfo = { version = "*", channel = "conda-forge" }
# pytorch-lightning = { version = "*", channel = "conda-forge" }
# libfaiss = { version = "*", channel = "pytorch" }
# faiss-gpu = { version = ">=1.8.0", channel = "pytorch" }

[tool.pixi.feature.mlops.dependencies] # ? MLOps
tensorboard = { version = "*", channel = "conda-forge" }

[tool.pixi.feature.jupyter.dependencies] # ? jupyter
ipykernel = { version = "*", channel = "conda-forge" }
ipywidgets = { version = "*", channel = "conda-forge" }

[tool.pixi.feature.huggingface.dependencies] # ? 🤗
transformers = { version = "*", channel = "conda-forge" }
datasets = { version = "*", channel = "conda-forge" }
# diffusers = { version = "0.21.0", channel = "conda-forge" }
huggingface_hub = { version = "*", channel = "conda-forge" }

[tool.pixi.feature.web.dependencies] # ? web
httpx = { version = "*", channel = "conda-forge" }

[tool.pixi.feature.misc.dependencies] # ? misc
tqdm = { version = "*", channel = "conda-forge" }
rich = { version = "*", channel = "conda-forge" }
beartype = { version = "*", channel = "conda-forge" }
typing_extensions = { version = "*", channel = "conda-forge" }

[tool.pixi.pypi-dependencies]
manga-det = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = [
    "misc",
    "numeric",
    "plots",
    "torch",
    "mlops",
    "jupyter",
    "huggingface",
    "web",
], solve-group = "default" }

[tool.pixi.tasks]

[tool.ruff]
src = ["libs"]
line-length = 100
target-version = "py311"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.ruff.lint]
per-file-ignores = { "*.ipynb" = [
    "F401",
    "E402",
    "PLE1142",
    "PLR2004",
    "PLR0913",
], "*.pyi" = [
    "F401",
] }
select = [
    # "D",   # pydocstyle
    # "ANN", # flake8-annotations
    "TCH", # flake8-type-checking
    "FBT", # flake8-boolean-trap

    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "I",    # isort
    "PL",   # pylint
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "PTH",  # flake8-use-pathlib
    "TRY",  # tryceratops
    "PERF", # Perflint 
    "FURB", # refurb 
    "PT",   # flake8-pytest-style
]
ignore = [
    "RUF001", # ambiguous cyrillic letters
    "RUF002", # ambiguous cyrillic letters
    "RUF003", # ambiguous cyrillic letters
    "ANN101", # missing-type-self #? deprecated
    "N812",
    "D202",   # no-blank-line-after-function
]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "./.pixi/envs"
reportPrivateImportUsage = false
reportMissingImports = true
# reportMissingTypeStubs = true


#? cSpell Configuration:
# cspell: words pixi einops jaxtyping ipywidgets httpx
# cspell: words mlops tryceratops FURB
